ECP.ApiGateway/k8s/02Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: weather-api
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
